# byondapi-rs

crates/byondapi-impl/: Cargo.toml
crates/byondapi-impl/src/: lib.rs
crates/byondapi-rs/: Cargo.toml
crates/byondapi-rs-test/: Cargo.toml
crates/byondapi-rs-test/src/: lib.rs  macro_test.rs
crates/byondapi-rs-test/tests/: test.rs
crates/byondapi-rs/src/: error.rs  global.rs  lib.rs  list.rs  map.rs  panic.rs  prelude.rs  static_global.rs
crates/byondapi-rs/src/value/: constructors.rs  conversion.rs  functions.rs  mod.rs  pointer.rs  trait_impls.rs  typecheck.rs
crates/byondapi-rs/src/value/conversion/: from.rs  to.rs  wrappers.rs
crates/byondapi-rs/src/value/conversion/from/: container.rs  list.rs  num.rs  string.rs
crates/byondapi-rs/src/value/conversion/to/: container.rs  list.rs  num.rs  string.rs
crates/byondapi-serde/: Cargo.toml
crates/byondapi-serde/src/: de.rs  error.rs  lib.rs  ser.rs
crates/byondapi-serde/src/ser/: map.rs  seq.rs  variant.rs
crates/byondapi-sys/: Cargo.toml  build.rs
crates/byondapi-sys/headers/515-1617/: byondapi.h
crates/byondapi-sys/src/: lib.rs
