[package]
name = "byondapi"
version = "0.2.1"
authors = ["tigercat2000 <nick.pilant@gmail.com>"]
edition = "2021"
description = "Idiomatic Rust bindings for BYONDAPI"
readme = "README.md"
license = "MIT"
repository = "https://github.com/spacestation13/byondapi-rs"
keywords = ["byond", "byondapi"]
exclude = [".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
byondapi-impl = { path = "../byondapi-impl" }
byondapi-sys = { path = "../byondapi-sys", default-features = false }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"

[features]
default = ["byond-515-1617"]
byond-515-1617 = ["byond-515-1611", "byondapi-sys/byond-515-1617"]
byond-515-1611 = ["byond-515-1610", "byondapi-sys/byond-515-1611"]
byond-515-1610 = ["byond-515-1609", "byondapi-sys/byond-515-1610"]
byond-515-1609 = ["byondapi-sys/byond-515-1609"]
